# service-fabric

./: .dockerignore  .gitattributes  .gitconfig  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  Service_Fabric_ReleaseNotes_90CU9.md  Service_Fabric_ReleaseNotes_91CU4.md  ThirdPartyNotices.txt  connect.sh  docker-compose.yml  runbuild.sh
src/prod/: CMakeLists.txt  linuxbuildversion.txt  linuxupgradebuildversion.txt
src/prod/Setup/: ArtifactsSpecification.csv
src/prod/Setup/FabricDeployer/: CommandLineParser.cs  Program.cs
src/prod/ktl/: CMakeLists.txt
src/prod/ktl/src/: CMakeLists.txt  UserProject.mk  project.mk
src/prod/linuxsetup/: CMakeLists.txt  crio.cc.conf  crio.kata.conf
src/prod/linuxsetup/debian/: CMakeLists.txt
src/prod/linuxsetup/rhel/: CMakeLists.txt
src/prod/linuxsetup/scripts/: splittestdir.sh  symsplit.sh
src/prod/linuxsetup/versions/: .gitattributes  coreclrlibs.version  linuxbuild.version  linuxlibs.version  linuxlibscentos.version  linuxupgradebuild.version  sfxlibs.version  upgradetestlibs.version
src/prod/manifests/components/: Microsoft-ServiceFabric-KtlEvents.man  Microsoft-ServiceFabric-LeaseEvents.man
src/prod/shared/: CMakeLists.txt
src/prod/shared/ktlwf/: CMakeLists.txt  readme.txt
src/prod/src/: CMakeLists.txt
src/prod/src/AzureActiveDirectory/: CMakeLists.txt
src/prod/src/BlockStore/: CMakeLists.txt  service_fabric_block_store.props
src/prod/src/Common/: AccessToken.cpp  AccessToken.h  AccountHelper.Test.cpp  AccountHelper.cpp  AccountHelper.h  ActivityDescription.cpp  ActivityDescription.h  ActivityId.cpp  ActivityId.h  ActivityType.cpp  ActivityType.h  AllocableAsyncOperation.h  AllocableObject.h  ApiEventSource.cpp  ApiEventSource.h  ApiMonitoring.ApiCallDescription.Test.cpp  ApiMonitoring.ApiCallDescription.h  ApiMonitoring.ApiName.cpp  ApiMonitoring.ApiName.h  ApiMonitoring.ApiNameDescription.cpp  ApiMonitoring.ApiNameDescription.h  ApiMonitoring.InterfaceName.cpp  ApiMonitoring.InterfaceName.h  ApiMonitoring.MonitoringComponent.Test.cpp  ApiMonitoring.MonitoringComponent.cpp  ApiMonitoring.MonitoringComponent.h  ApiMonitoring.MonitoringComponentMetadata.h  ApiMonitoring.MonitoringData.h  ApiMonitoring.MonitoringParameters.h  ApiMonitoring.MonitoringTesting.h  ApiMonitoring.Pointers.h  Assert.Test.cpp  AssertWF.cpp  AssertWF.h  AsyncExclusiveLock.cpp  AsyncExclusiveLock.h  AsyncExclusiveLock.test.cpp  AsyncExclusiveLockEventSource.h  AsyncFabricComponent.Test.cpp  AsyncFabricComponent.cpp  (+606 more)
src/prod/src/Communication/: CMakeLists.txt  Communication.h  CommunicationSubsystem.cpp  CommunicationSubsystem.h  Constants.cpp  Constants.h  README.md  stdafx.h
src/prod/src/FabricGateway/: FabricGateway.cpp  FabricGateway.h  FabricGatewayConfig.cpp  FabricGatewayConfig.h  stdafx.h
src/prod/src/FabricNode/: FabricNode.cpp  FabricNodeEventSource.h  fabricnode.h  stdafx.h
src/prod/src/Federation/: ArbitrationOperation.cpp  ArbitrationOperation.h  ArbitrationReplyBody.cpp  ArbitrationReplyBody.h  ArbitrationRequestBody.cpp  ArbitrationRequestBody.h  ArbitrationTable.cpp  ArbitrationTable.h  ArbitrationType.cpp  ArbitrationType.h  BroadcastAckReceiverContext.cpp  BroadcastAckReceiverContext.h  BroadcastForwardContext.cpp  BroadcastForwardContext.h  BroadcastHeader.h  BroadcastManager.cpp  BroadcastManager.h  BroadcastRangeHeader.h  BroadcastRelatesToHeader.h  BroadcastReplyContext.cpp  BroadcastReplyContext.h  BroadcastRequestReceiverContext.cpp  BroadcastRequestReceiverContext.h  BroadcastStepHeader.h  Constants.cpp  Constants.h  EdgeProbeMessageBody.h  FabricCodeVersionHeader.h  Federation.h  FederationConfig.Test.cpp  FederationConfig.cpp  FederationConfig.h  FederationEventSource.cpp  FederationEventSource.h  FederationMessage.cpp  FederationMessage.h  FederationNeighborhoodRangeHeader.h  FederationNeighborhoodVersionHeader.h  FederationPartnerNodeHeader.h  FederationPointers.h  (+135 more)
src/prod/src/Hosting2/: ActivateCodePackageReply.cpp  ActivateCodePackageReply.h  ActivateCodePackageRequest.cpp  ActivateCodePackageRequest.h  ActivateContainerReply.cpp  ActivateContainerReply.h  ActivateContainerRequest.cpp  ActivateContainerRequest.h  ActivateHostedServiceRequest.cpp  ActivateHostedServiceRequest.h  ActivateProcessReply.cpp  ActivateProcessReply.h  ActivateProcessRequest.cpp  ActivateProcessRequest.h  Activator.cpp  Activator.h  ActivatorRequestor.cpp  ActivatorRequestor.h  Application.cpp  Application.h  ApplicationEnvironmentContext.cpp  ApplicationEnvironmentContext.h  ApplicationHost.cpp  ApplicationHost.h  ApplicationHostActivationTable.cpp  ApplicationHostActivationTable.h  ApplicationHostCodePackageActivator.cpp  ApplicationHostCodePackageActivator.h  ApplicationHostCodePackageOperationReply.cpp  ApplicationHostCodePackageOperationReply.h  ApplicationHostCodePackageOperationRequest.cpp  ApplicationHostCodePackageOperationRequest.h  ApplicationHostContainer.cpp  ApplicationHostContainer.h  ApplicationHostContext.cpp  ApplicationHostContext.h  ApplicationHostIsolationContext.cpp  ApplicationHostIsolationContext.h  ApplicationHostManager.cpp  ApplicationHostManager.h  (+640 more)
src/prod/src/Lease/: CMakeLists.txt  LeaseLayerApi.Test.cpp  LeaseLayerTestCommon.cpp  LeaseLayerTestCommon.h  stdafx.h
src/prod/src/LeaseAgent/: DummyLeaseDriver.cpp  DummyLeaseDriver.h  LeaseAgent.cpp  LeaseAgent.h  LeaseAgentEventSource.cpp  LeaseAgentEventSource.h  LeaseAgentInstance.h  LeaseConfig.cpp  LeaseConfig.h  LeasePartner.cpp  LeasePartner.h  stdafx.h
src/prod/src/Management/: CMakeLists.txt  README.md
src/prod/src/Naming/: ActivityTracedComponent.h  BroadcastEventManager.cpp  BroadcastEventManager.h  BroadcastRequestEntry.cpp  BroadcastRequestEntry.h  BroadcastRequestVector.cpp  BroadcastRequestVector.h  BroadcastWaiters.cpp  BroadcastWaiters.h  CMakeLists.txt  CacheModeHeader.cpp  CacheModeHeader.h  CacheUpdateEventArgs.h  Caching.test.cpp  ClientAccessConfig.cpp  ClientAccessConfig.h  ClientAndEntreeCommunication.Test.cpp  (+290 more)
src/prod/test/: .gitignore  CMakeLists.txt  RunAzureTests.cmd
src/prod/tools/: CMakeLists.txt
(+16734 files in other folders)
